--- a/home-page.html
+++ b/home-page.html
@@ -9,10 +9,11 @@
     <title>لغة الإشارة</title>
 </head>
 
+<body dir="rtl">
     <header><!-- معلومات بداية الصفحة-->
-        <label><button type="button"> تسجيل الدخول</button></label>
-        <label><button type="button"> حساب جديد</button></label>
-        <label><button type="button"> قيمنا</button></label>
+        <label><button type="button"><a href="file:///D:/Sign%20language/Sign%20in.html"> تسجيل الدخول </a></button></label>
+        <label><button type="button"><a href="file:///D:/Sign%20language/Sign%20Up.html">حساب جديد</a></button></label>
+        <label><button type="button"><a href="file:///D:/Sign%20language/rate%20us.html">قيمنا </a></button></label>
         <hr>
         <h1>تعلم لغة الإشارة</h1>
     </header>
@@ -22,15 +23,15 @@
         <ol><!--قائمة الروابط على دروس الموقع-->            
             <li>اساسيات لغة الإشارة
                 <ul><!--قائمة الروابط على الدرس الاول-->
-                    <li><div>الاحرف</div></li>
-                    <li><div>الارقام</div></li>
+                    <li><a href="file:///D:/Sign%20language/alphabet.html">الاحرف</a></li>
+                    <li ><a href="file:///D:/Sign%20language/numbers.html">الارقام</a></li>
                 </ul>
             </li>
-            <li>موضع واتّجاهات اليد في لغة الإشارة</li>
+            <li><a href="file:///D:/Sign%20language/Position%20and%20directions%20of%20the%20hand.html">موضع واتّجاهات اليد في لغة الإشارة</a></li>
         </ol>
 
     </aside>
-<body>
+
     <section><!--المحتوى-->
         <h3>ما هي لغة الاشارة</h3><br>
         <p>لغة الإشارة تطلق على وسيلة التواصل غير الصوتية 
@@ -46,21 +47,7 @@
 <footer>
     <hr>
     <address>تواصل معنا</address>
-    <br>
-    <table border="1" align="right">
-        <caption><strong>اسماء مصممات الموقع</strong></caption>
-          <thead>
-              <tr>
-                  <th>اعضاء المجموعة</th>
-              </tr>
-              </thead><tbody>
-                  <tr><td>نورة</td></tr>
-                  <tr><td>أمل</td></tr>
-                  <tr><td>العنود</td></tr>
-                  <tr><td>عهود</td></tr>
-                  <tr><td>أثير</td></tr>
-              </tbody>
-      </table>
+    
 
 </footer>
 </html>
