--- a/Sign Up.html
+++ b/Sign Up.html
@@ -10,57 +10,68 @@
     </head>
 
     <body dir="rtl">
-    <form>
+        <div class="box2">
+    <form class="form">
 
         <table>
             <caption><h2>إنشاء حساب جديد</h2></caption>
             <tbody>
                   <tr>
-                    <td>الاسم*:</td>
-                    <td><input type="text" name="The name" placeholder="ادخل اسمك" required ></td>
+                    <td>
+                    <p>الاسم*:</p>
+                    <input class="form-field2" type="text" name="The name" placeholder=" ادخل اسمك" required ></td>
                 </tr>
 
                 <tr>
-                    <td>  اسم الحساب*: </td>
-                    <td><input type="text" name="user-name" placeholder="ادخل اسم حسابك" required ></td>
+                    <td> 
+                       <p> اسم الحساب*: </p>
+                    <input class="form-field2" type="text" name="user-name" placeholder=" ادخل اسم حسابك" required ></td>
                 </tr>
                 
                 <tr>
-                    <td>الايميل*:</td>
-                    <td><input type="email" name="The email" placeholder="ادخل ايميلك" required ></td>
+                    <td>
+                    <p>الايميل*:</p>
+                    <input class="form-field2"  type="email" name="The email" placeholder=" ادخل ايميلك" required ></td>
                 </tr>
 
                 <tr>
-                    <td>رقم للتواصل:</td>
-                    <td><input type="tel" name="phoneNumber" pattern="05********" placeholder="05********"></td>
+                    <td>
+                    <p>رقم للتواصل:</p>
+                    <input class="form-field2" type="tel" name="phoneNumber" pattern=" 05********" placeholder=" 05********"></td>
                 </tr>
 
                 <tr>
-                    <td>الرقم السري*:</td>
-                    <td><input type="password" name="The password" placeholder="ادخل الرقم السري" required ></td>
+                    <td>
+                    <p>الرقم السري*:</p>
+                    <input class="form-field2" type="password" name="The password" placeholder=" ادخل الرقم السري" required ></td>
                 </tr>
 
                 <tr>
-                    <td>اعادة الرقم السري*:</td>
-                    <td><input type="password" name="re-password" placeholder="اعادة ادخال الرقم السري" required ></td>
+                    <td>
+                    <p>اعادة الرقم السري*:</p>
+                    <input class="form-field2" type="password" name="re-password" placeholder=" اعادة ادخال الرقم السري" required ></td>
                 </tr>
 
                 <tr>
-                    <td>الجنس:</td>
-                    <td><input type="radio" name="male"> رجل <input type="radio" name="female"> انثى</td>
+                    <td>
+                    <p>تاريخ الميلاد:</p>
+                    <input class="form-field2" type="date" name="birth date" ></td>
                 </tr>
 
                 <tr>
-                    <td>تاريخ الميلاد:</td>
-                    <td><input type="date" name="birth date" ></td>
+                    <td>
+                    <p>الجنس:</p>
+                    <input  type="radio" name="male"> رجل <input type="radio" name="female"> انثى<br></td>
+                </tr>
+
+               
+
+                <tr>
+                    <td><p> لديك حساب؟ اذن <a id="a" href="Sign in.html">سجل الدخول</a></p></td>
                 </tr>
 
                 <tr>
-                    <td><p> لديك حساب؟ اذن <a href="file:///D:/Sign%20language/Sign%20in.html">سجل الدخول</a></p></td>
-                </tr>
-
-                <tr>
-                    <td><input type="submit" name="OK" value="تم"> <input type="reset" name="reset" value="اعادة"></td>
+                    <td><input class="submit2" type="submit" name="OK" value="تم"> <input class="submit2" type="reset" name="reset" value="اعادة"></td>
                 </tr>
 
                 <tr>
@@ -71,6 +82,7 @@
               </tbody>
       </table>
     </form>
+</div>
     </body>
 
 
