--- a/home-page.html
+++ b/home-page.html
@@ -11,9 +11,9 @@
 
 <body dir="rtl">
     <header><!-- معلومات بداية الصفحة-->
-        <label><button type="button"><a href="file:///D:/Sign%20language/Sign%20in.html"> تسجيل الدخول </a></button></label>
-        <label><button type="button"><a href="file:///D:/Sign%20language/Sign%20Up.html">حساب جديد</a></button></label>
-        <label><button type="button"><a href="file:///D:/Sign%20language/rate%20us.html">قيمنا </a></button></label>
+        <label><button type="button"><a href="Sign in.html"> تسجيل الدخول </a></button></label>
+        <label><button type="button"><a href="Sign Up.html">حساب جديد</a></button></label>
+        <label><button type="button"><a href="rate us.html">قيمنا </a></button></label>
         <hr>
         <h1>تعلم لغة الإشارة</h1>
     </header>
